app/assets/stylesheets/posts.scss
.success-wrap h2 {
  text-align: center;
  letter-spacing: 2px;
  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height:1.4em;
  font-size:25px;
  margin-top: 40px;
  margin-bottom: 20px;
}
.posts {

  &-post {
    width:100%;
    max-width: 400px;
    overflow: hidden;
    border-radius: 8px;
    list-style: none;
    margin: 10px;
    // background: #FE6B6B;
    // background: -moz-linear-gradient(left, #ed1178 0%, #f0443c 100%);
    // background: -webkit-linear-gradient(left, #ed1178 0%,#f0443c 100%);
    // background: linear-gradient(to right, #ed1178 0%,#f0443c 100%);
    // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ed1178', endColorstr='#f0443c',GradientType=1 );
    box-shadow: 0 2px 10px rgba(0,0,0,.26);
    &_highlight {
      animation: inout 2.8s;
      -webkit-animation: inout 2.8s;
      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.26);
      z-index:5;
      position: relative;
    }

    &-text {
      width:100%;
      height:100%;
      background-color: #FFF;
      font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;

      & a {
        text-decoration: none;
        color:#FE6B6B;
      }

      &_title {
        font-size:20px;
        padding-top: 25px;
        margin-left:20px;
      }

      &_outline {
        font-size:16px;
        margin-top:20px;
        margin-left:20px;
      }

      //&:hover {
      //  box-shadow: 0 1px 5px rgba(0,0,0,.35);
      //  -webkit-transition: all 0.2s ease;
      //  -moz-transition: all 0.2s ease;
      //  -o-transition: all 0.2s ease;
      //}
      //&:before{
      //  position: absolute;
      //  top: 1.3em;
      //  left: 0;
      //  content: "";
      //  display: inline-block;
      //  width: 0;
      //  height: 3px;
      //  background: #FDD344;
      //  transition: 5s;
      //}
      //&:hover:before{
      //  width: 100%;
      //}

      &_open {
        position: fixed !important;
        top:50px !important;

      }

      &_single {
        width: 93%;
        height: 60vh;
        margin: 0 auto;
        display: none;
        position: fixed;
        left:0;
        right:0;
        bottom: 10px;
        z-index:3;
        background-color: #FFF;
        border:1px solid #EEE;
        border-radius:5px;
      }
    }
  }
}

.ranked-post {
  margin: 0 5px 10px;
  background-color: #FE6B6B;
  box-shadow: 0 2px 10px rgba(0,0,0,.26);
  border-radius: 8px;

  &-header {
    color: #fff;
    padding: 0 15px;
    position: relative;

    .link-to-show {
      position: absolute;
      top: 0;
      bottom: 0;
      right: 0;
      left: 0;

      &:focus {
        outline: none;
      }
    }

    &-icon {
      text-align: center;
      padding: 15px;

      .ranked-post-icon {
        font-size: 50px;
      }
    }

    &-title {
      padding-bottom: 20px;
      text-align: center;
      font-size: 20px;
      line-height: 1.2;
      color: #fff;
      font-weight: bold;
    }

    &-detail {
      font-size: 14px;
      line-height: 1.3;
      padding-bottom: 10px;
    }

    .crown-large-circle {
      height: 60px;
      width: 60px;
      border-radius: 50%;
      background-color: #fff;
      position: absolute;
      top: 5px;
      left: 10px;
      text-align: center;
      box-shadow: 0 2px 4px rgba(0,0,0,.2);

      img {
        height: 30px;
        width: 30px;
        margin: 6px auto 0;
      }

      span {
        font-size: 14px;
        font-weight: bold;
      }

      .no1-label {
        color: #ffd700;
      }

      .no2-label {
        color: #c0c0c0;
      }

      .no3-label {
        color: #cd853f;
      }
    }

    .crown-small-circle {
      height: 50px;
      width: 50px;
      border-radius: 50%;
      background-color: #fff;
      position: absolute;
      top: 10px;
      left: 15px;
      text-align: center;
      box-shadow: 0 2px 4px rgba(0,0,0,.2);

      img {
        height: 25px;
        width: 25px;
        margin: 5px auto 0;
      }

      span {
        font-size: 12px;
        font-weight: bold;
        color: #1e90ff;
        position: relative;
        bottom: 2px;
      }
    }
  }

  &-footer {
    margin: 0 20px;
    padding: 8px 0;
    color: #fff;

    .post-founder-wrapper {
      float: left;
    }

    .post-founder-img {
      float: left;

      img {
        height: 30px;
        width: 30px;
        border-radius: 50%;
        object-fit: cover;
      }
    }

    .post-founder-info {
      float: left;
      margin-left: 10px;

      .post-founder-name {
        margin: 10px 0;
        line-height: 30px;
        font-size: 14px;

        a {
          text-decoration: none;
          color: #fff;
        }
      }
    }

    .post-footer-vote {
      float: right;

      a {
        color: #fff;
      }

      .post-vote-heart {
        font-size: 22px;
        line-height: 30px;
      }

      .post-vote-count {
        font-size: 18px;
        line-height: 30px;
        position: relative;
        bottom: 2px;
      }

      .post-share-btn {
        font-size: 22px;
        line-height: 30px;
        margin-right: 15px;
      }
    }
  }
}

.slick-dots.ranking-slide-dots li.slick-active button:before {
  opacity: 1;
  color: #FED430;
  font-size: 12px;
}

.slick-dots.new-post-slide-dots {
  opacity: 1;
  color: #FED430;
  font-size: 20px;
  position: fixed;
  top: 9px;
  left:0;
  right:0;
  width:100px;
  height:50px;
  margin: 0 auto;
  z-index: 999;
}

.slick-dots.new-post-slide-dots button:before {
  font-family: "FontAwesome";
  content: "\f10c";
  opacity: 1;
  color: #FED430;
  font-size: 20px;
}
.slick-dots.new-post-slide-dots li.slick-active button:before {
  font-family: "FontAwesome";
  content: "\f111";
  opacity: 1;
  color: #FED430;
  font-size: 20px;
}


a.new-post-btn-close {
  font-size:25px;
  text-decoration: none;
  color:#FDD344;
  margin-top: 12px;
  margin-left: 17px;
  float: left;
  font-weight: 100;
}
/* ... */

